--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="navbar">
       <a
-        href="https://www.notion.so/YouTube-59f56930a66c49eb97c5abe9c3548429?pvs=4"
+        href="https://www.notion.so/YouTube-59f56930a66c49eb97c5abe9c3548429?pvs=4" target="_blank"
         >Home</a
       >
       <a href="#videos">Videos</a>
