--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="navbar">
       <a href="https://www.notion.so/YouTube-59f56930a66c49eb97c5abe9c3548429?pvs=4" target="_blank">Home</a>
       <a href="https://www.notion.so/All-d5284b9ece84477b9a4bd0d3c4de760b?pvs=4" target="_blank">Videos</a>
-      <a href="https://www.notion.so/All-088f50ec42bd4acebdd35668106ce3d7?pvs=4">Channels</a>
-      <a href="https://www.notion.so/Favorite-f085f5bc19f445d09e6e141c07cdea94?pvs=4">Favorite</a>
-      <a href="https://www.notion.so/Bookmark-a5ff491cad4a400380a411f5ce98cccc?pvs=4">Bookmarks</a>
-      <a href="https://www.notion.so/How-to-8806223c442f4c96b071d0f58b250359?pvs=4">How-To</a>
-      <a href="https://www.notion.so/Q-A-356c48f546a9422ca22bf3d713f1a1ab?pvs=4">Q&A</a>
+      <a href="https://www.notion.so/All-088f50ec42bd4acebdd35668106ce3d7?pvs=4" target="_blank">Channels</a>
+      <a href="https://www.notion.so/Favorite-f085f5bc19f445d09e6e141c07cdea94?pvs=4" target="_blank">Favorite</a>
+      <a href="https://www.notion.so/Bookmark-a5ff491cad4a400380a411f5ce98cccc?pvs=4" target="_blank">Bookmarks</a>
+      <a href="https://www.notion.so/How-to-8806223c442f4c96b071d0f58b250359?pvs=4" target="_blank">How-To</a>
+      <a href="https://www.notion.so/Q-A-356c48f546a9422ca22bf3d713f1a1ab?pvs=4" target="_blank">Q&A</a>
     </div>
   </body>
 </html>
